--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "http-server": "^14.1.0",
+    "ignore-loader": "^0.1.2",
     "jest": "^27.4.7",
     "style-loader": "^3.3.1",
     "ts-jest": "^27.1.3",
@@ -66,6 +67,9 @@
     "@jupyterlab/rendermime": "^3.2.9",
     "@jupyterlab/services": "^6.2.8",
     "@jupyterlab/theme-light-extension": "^3.2.9",
+    "@jupyterlite/pyolite-kernel-extension": "^0.1.0-beta.1",
+    "@jupyterlite/server": "^0.1.0-beta.1",
+    "@jupyterlite/server-extension": "^0.1.0-beta.1",
     "@lumino/widgets": "^1.31.1",
     "@reduxjs/toolkit": "^1.7.1",
     "@types/lodash.merge": "^4.6.6",
