--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "esModuleInterop": true,
-    "target": "es6",
+    "target": "esnext",
     "lib": ["dom", "dom.iterable", "esnext"],
     "noImplicitAny": true,
     "strict": true,
@@ -13,7 +13,8 @@
     "outDir": "dist",
     "baseUrl": ".",
     "paths": {
-      "*": ["node_modules/*"]
+      "*/": ["node_modules/*"],
+      "~/": ["src/*"]
     },
     "declaration": true,
     "skipLibCheck": true
