🪵  all basic demos launching with logs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "baseUrl": ".",
     "paths": {
       "*/": ["node_modules/*"],
-      "~/": ["src/*"]
+      "~/": ["./src/*"]
     },
     "declaration": true,
     "skipLibCheck": true
