--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "yarn clean;concurrently 'tsc' 'npx copyfiles src/index.css dist -u 1' 'webpack --config webpack.dev.js'",
     "build:prod": "yarn clean;concurrently 'tsc' 'npx copyfiles src/index.css dist -u 1' 'webpack --config webpack.prod.js'",
     "build:watch": "concurrently 'tsc -w' 'npx copyfiles src/index.css dist -u 1' 'webpack --config webpack.dev.js --watch'",
+    "build:lite:demo": "npx ts-node ./bin/buildLiteDemo.ts",
     "dev": "yarn build:watch",
     "start": "webpack serve --open --config webpack.dev.js",
     "test": "jest",
@@ -38,6 +39,7 @@
   "author": "Steve Purves",
   "license": "MIT",
   "devDependencies": {
+    "chalk": "4.1.2",
     "concurrently": "^7.0.0",
     "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.6.0",
@@ -67,9 +69,9 @@
     "@jupyterlab/rendermime": "^3.2.9",
     "@jupyterlab/services": "^6.2.8",
     "@jupyterlab/theme-light-extension": "^3.2.9",
-    "@jupyterlite/pyolite-kernel-extension": "^0.1.0-beta.10",
-    "@jupyterlite/server": "^0.1.0-beta.10",
-    "@jupyterlite/server-extension": "^0.1.0-beta.10",
+    "@jupyterlite/pyolite-kernel-extension": "0.1.0-beta.10",
+    "@jupyterlite/server": "0.1.0-beta.10",
+    "@jupyterlite/server-extension": "0.1.0-beta.10",
     "@lumino/widgets": "^1.31.1",
     "@reduxjs/toolkit": "^1.7.1",
     "@types/lodash.merge": "^4.6.6",
