🗜  reduced package to essentials only

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "scripts": {
     "clean": "rm -rf dist",
     "prepublish": "yarn build",
+    "build:tsc": "concurrently 'tsc' 'npx copyfiles src/index.css dist -u 1'",
+    "build:bundle": "yarn clean;webpack --config webpack.dev.js",
     "build": "yarn clean;concurrently 'tsc' 'npx copyfiles src/index.css dist -u 1' 'webpack --config webpack.dev.js'",
     "build:prod": "yarn clean;concurrently 'tsc' 'npx copyfiles src/index.css dist -u 1' 'webpack --config webpack.prod.js'",
     "build:watch": "concurrently 'tsc -w' 'npx copyfiles src/index.css dist -u 1' 'webpack --config webpack.dev.js --watch'",
