--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
   "author": "Steve Purves",
   "license": "MIT",
   "devDependencies": {
+    "@jupyterlite/pyolite-kernel-extension": "0.1.0-beta.10",
+    "@jupyterlite/server": "0.1.0-beta.10",
+    "@jupyterlite/server-extension": "0.1.0-beta.10",
     "chalk": "4.1.2",
     "concurrently": "^7.0.0",
     "copy-webpack-plugin": "^10.2.4",
@@ -60,6 +63,11 @@
     "webpack-dev-server": "^4.7.4",
     "webpack-merge": "^5.8.0"
   },
+  "peerDependencies": {
+    "@jupyterlite/pyolite-kernel-extension": "0.1.0-beta.10",
+    "@jupyterlite/server": "0.1.0-beta.10",
+    "@jupyterlite/server-extension": "0.1.0-beta.10"
+  },
   "dependencies": {
     "@jupyter-widgets/base": "^4.0.0",
     "@jupyter-widgets/controls": "^3.0.0",
@@ -71,9 +79,6 @@
     "@jupyterlab/rendermime": "^3.2.9",
     "@jupyterlab/services": "^6.2.8",
     "@jupyterlab/theme-light-extension": "^3.2.9",
-    "@jupyterlite/pyolite-kernel-extension": "0.1.0-beta.10",
-    "@jupyterlite/server": "0.1.0-beta.10",
-    "@jupyterlite/server-extension": "0.1.0-beta.10",
     "@lumino/widgets": "^1.31.1",
     "@reduxjs/toolkit": "^1.7.1",
     "@types/lodash.merge": "^4.6.6",
