--- a/package.json
+++ b/package.json
@@ -85,8 +85,7 @@
     "@types/jest": "^28.1.4",
     "@types/lodash.merge": "^4.6.6",
     "fontawesome": "^5.6.3",
-    "jest-raw-loader": "^1.0.1",
-    "jest-transform-stub": "^2.0.0",
+    "jest-environment-jsdom": "^28.1.2",
     "lodash.merge": "^4.6.2",
     "nanoid": "^3.2.0",
     "ts-node": "^10.8.2"
