--- a/package.json
+++ b/package.json
@@ -2,24 +2,24 @@
   "name": "thebe-core",
   "version": "0.0.12",
   "description": "Typescript based core functionality for Thebe",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/cjs/index.js",
+  "types": "dist/cjs/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
     "clean": "rm -rf dist",
     "prepublish": "yarn build",
-    "build:tsc": "concurrently 'tsc' 'npx copyfiles src/index.css dist -u 1'",
+    "build:tsc": "concurrently 'tsc' 'npx copyfiles src/index.css dist/cjs -u 1'",
     "build:bundle": "yarn clean;webpack --config webpack.dev.js",
-    "build": "yarn clean;concurrently 'tsc' 'npx copyfiles src/index.css dist -u 1' 'webpack --config webpack.dev.js'",
-    "build:prod": "yarn clean;concurrently 'tsc' 'npx copyfiles src/index.css dist -u 1' 'webpack --config webpack.prod.js'",
-    "build:watch": "concurrently 'tsc -w' 'npx copyfiles src/index.css dist -u 1' 'webpack --config webpack.dev.js --watch'",
+    "build": "yarn clean;concurrently 'tsc' 'npx copyfiles src/index.css dist/cjs -u 1' 'webpack --config webpack.dev.js'",
+    "build:prod": "yarn clean;concurrently 'tsc' 'npx copyfiles src/index.css dist/cjs -u 1' 'webpack --config webpack.prod.js'",
+    "build:watch": "concurrently 'tsc -w' 'npx copyfiles src/index.css dist/cjs -u 1' 'webpack --config webpack.dev.js --watch'",
     "build:lite:demo": "npx ts-node ./bin/buildLiteDemo.ts",
     "dev": "yarn build:watch",
     "start": "webpack serve --open --config webpack.dev.js",
-    "test": "jest",
-    "test:watch": "jest --watchAll",
+    "test": "jest --runInBand",
+    "test:watch": "jest --watchAll --runInBand",
     "serve": "http-server .",
     "y-push": "yarn version --patch; yalc push"
   },
@@ -53,9 +53,9 @@
     "html-webpack-plugin": "^5.5.0",
     "http-server": "^14.1.0",
     "ignore-loader": "^0.1.2",
-    "jest": "^27.4.7",
+    "jest": "^28.1.2",
     "style-loader": "^3.3.1",
-    "ts-jest": "^27.1.3",
+    "ts-jest": "^28.0.5",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
     "webpack": "^5.68.0",
@@ -78,12 +78,16 @@
     "@jupyterlab/outputarea": "^3.2.9",
     "@jupyterlab/rendermime": "^3.2.9",
     "@jupyterlab/services": "^6.2.8",
+    "@jupyterlab/testutils": "^3.4.3",
     "@jupyterlab/theme-light-extension": "^3.2.9",
     "@lumino/widgets": "^1.31.1",
     "@reduxjs/toolkit": "^1.7.1",
+    "@types/jest": "^28.1.4",
     "@types/lodash.merge": "^4.6.6",
     "fontawesome": "^5.6.3",
+    "jest-environment-jsdom": "^28.1.2",
     "lodash.merge": "^4.6.2",
-    "nanoid": "^3.2.0"
+    "nanoid": "^3.2.0",
+    "ts-node": "^10.8.2"
   }
 }
